keycloak-gatekeeper/keycloak-gatekeeper.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: oidc-proxy-dashboard
  namespace: kube-oidc-proxy
spec:
  replicas: 1
  template:
    metadata:
      labels:
          name: oidc-proxy-dashboard
      annotations:
        repository: https://github.com/keycloak/keycloak-gatekeeper
    spec:
      securityContext:
        fsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      containers:
        - name: proxy
          image: bitnami/keycloak-gatekeeper:2.3.0-r1
          args:
            - /keycloak-proxy
            - --client-id=$(OIDC_CLIENT_ID)
            - --client-secret=$(OIDC_CLIENT_SECRET)
            - --discovery-url=$(OIDC_ISSUER_URL)
            - --enable-json-logging=true
            - --enable-logging=true
            - --enable-request-id=true
            - --listen=0.0.0.0:3000
            - --preserve-host=true
            - --resources=uri=/*
            - --upstream-url=https://kubernetes-dashboard
            - --secure-cookie=false
          securityContext:
            readOnlyRootFilesystem: true
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: oidc-proxy-dashboard
  name: oidc-proxy-dashboard
  namespace: kube-oidc-proxy
spec:
  ports:
  - name: http
    port: 3000
    protocol: TCP
    targetPort: 3000

  selector:
    name: oidc-proxy-dashboard
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  labels:
    app: oidc-proxy-dashboard
  name: oidc-proxy-dashboard
  namespace: kube-oidc-proxy
spec:
  rules:
  - host: dashboard-oidc.minikube.net
    http:
      paths:
      - backend:
          serviceName: oidc-proxy-dashboard
          servicePort: http
        path: /
  tls:
   - hosts:
     - dashboard-oidc.minikube.net
